Creo los componentes Store, Session, Register, Footer, NavigationBar, NavigationAdm. Realicé limpieza de algunos componentes react

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#hulk-logo {
+  height: 30px;
+  margin-right: 10px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
